--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --embedded-language-formatting={auto,off} --config .prettierrc '**/*.{ts,tsx,css,scss,json,js,jsx}'  --write"
   },
   "dependencies": {
     "next": "^10.0.0",
