Ignored package-lock.json file and .idea directory

--- a/.gitignore
+++ b/.gitignore
@@ -18,11 +18,15 @@
 # misc
 .DS_Store
 
+# Jetbrains IDE
+.idea/*
+
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 yarn.lock
+/package-lock.json
 
 # local env files
 .env.local
