--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "sass": "^1.28.0",
     "tailwindcss": "^1.9.6"
   },
   "browserslist": [
