Ignored .firebaserc from git and Removed git cached

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ firebase.log
 .env.development.local
 .env.test.local
 .env.production.local
+
+# firebase
+**/.firebaserc
+.runtimeconfig.json
+.firebase/
