--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "deploy": "next build && firebase deploy",
+    "deploy": "next build && firebase deploy --only hosting",
     "start": "next start",
     "format": "prettier --embedded-language-formatting={auto,off} --config .prettierrc '**/*.{ts,tsx,css,scss,json,js,jsx}' --write"
   },
